--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -12,7 +12,7 @@
     <string>manual</string>
     <key>provisioningProfiles</key>
     <dict>
-        <key>jp.co.anycloud.simple-sns.*</key>
+        <key>jp.co.anycloud.simple-sns.test-ci</key>
         <string>simple-sns</string>
     </dict>
     <key>signingCertificate</key>
